k8s/ingr2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-tomcat
spec:
  rules:
  - host: andrukhiv.hopto.org
    http:
      paths:
      - path: /banana
        pathType: Prefix
        backend:
          service:
            name: tomcat
            port:
              number: 8080
            
  ingressClassName: nginx
